Fix unwanted horizontal scroll on mobile web

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 .page-header { font-family: 'Kaushan Script', cursive; background-color: #000; color: #fff; margin: 0px 0px; padding: 0px; border: none; }
 .page-header img { width: 100%; max-width: 200px; }
@@ -120,16 +120,12 @@ body .container-fluid {
 .main-para {
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 40px;
-  padding-right: 40px;
 }
 
 .main-para-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 10px;
-  padding-bottom: 10px;
   width: 100%;
 }
 
